--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,14 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --primary-color: #1e6751;
+  --primary-light: #bfebdf;
+  --secondary-color: #f8b400;
+  --light-color: #f5f5f5;
+  --dark-color: #333333;
+  --danger-color: #dc3545;
+  --success-color: #198754;
 }
 
 a {
@@ -25,9 +33,14 @@ a:hover {
 body {
   margin: 0;
   display: flex;
+  flex-direction: column;
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  font-family: 'Montserrat', sans-serif;
+  background-color: #f8f9fa;
+  color: var(--dark-color);
+  padding-top: 0;
 }
 
 h1 {
@@ -66,3 +79,5 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+
+/* Add all the other CSS from public/index.html here */
