--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,15 +32,14 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
   font-family: 'Montserrat', sans-serif;
   background-color: #f8f9fa;
   color: var(--dark-color);
   padding-top: 0;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 h1 {
